# src/docs/swagger.json
@@ -7,10 +7,31 @@
 		"requestBodies": {},
 		"responses": {},
 		"schemas": {
+			"File": {
+				"description": "Provides information about files and allows JavaScript in a web page to access their content.\n\n[MDN Reference](https://developer.mozilla.org/docs/Web/API/File)",
+				"properties": {},
+				"type": "object",
+				"additionalProperties": false
+			},
 			"IUser": {
 				"properties": {
 					"name": {
 						"type": "string"
+					},
+					"age": {
+						"type": "number",
+						"format": "double"
+					},
+					"gender": {
+						"type": "string",
+						"enum": [
+							"Male",
+							"Female",
+							"Other"
+						]
+					},
+					"file": {
+						"$ref": "#/components/schemas/File"
 					},
 					"email": {
 						"type": "string"
@@ -23,6 +44,21 @@
 				"properties": {
 					"name": {
 						"type": "string"
+					},
+					"age": {
+						"type": "number",
+						"format": "double"
+					},
+					"gender": {
+						"type": "string",
+						"enum": [
+							"Male",
+							"Female",
+							"Other"
+						]
+					},
+					"file": {
+						"$ref": "#/components/schemas/File"
 					},
 					"email": {
 						"type": "string"
